Projects/rpython/source/lexer/BasisParser.py
# Generated from D:/Hybrid/Basis/Projects/rpython\Basis.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class BasisParser ( Parser ):

    grammarFileName = "Basis.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'\\'", "';'", "'import'", "'package'", "'with'", "'as'", 
                     "','", "'*'", "'if'", "'else'", "'for'", "'in'", "'=>'", 
                     "':'", "'='", "'return'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'*^'", "'/^'", "<INVALID>", "'.'", "'_'", 
                     "<INVALID>", "'('", "')'", "'['", "']'", "'{'", "'}'", 
                     "'%'", "'=='" ]

    symbolicNames = [ "<INVALID>", "SPACES", "JoinLine", "NEWLINE", "Escape", 
                      "Semicolon", "Import", "Package", "With", "As", "Comma", 
                      "Star", "If", "Else", "For", "In", "To", "Colon", 
                      "Set", "Return", "StringEscapeBlock", "StringEscapeSingle", 
                      "StringLiteralBlock", "StringLiteralSingle", "StringEmpty", 
                      "Decimal", "DecimalBad", "Binary", "Octal", "Hexadecimal", 
                      "Integer", "Exponent", "Base", "Identifier", "Dot", 
                      "Underline", "LineComment", "OPEN_PAREN", "CLOSE_PAREN", 
                      "OPEN_BRACK", "CLOSE_BRACK", "OPEN_BRACE", "CLOSE_BRACE", 
                      "Modulo", "Equal", "INDENT", "DEDENT" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_simpleStatement = 2
    RULE_shortStatement = 3
    RULE_compoundStatement = 4
    RULE_suite = 5
    RULE_declarePackage = 6
    RULE_declareImport = 7
    RULE_importSuite = 8
    RULE_importAlias = 9
    RULE_ifStatement = 10
    RULE_elseif = 11
    RULE_elseStatement = 12
    RULE_forInStatement = 13
    RULE_declareFunction = 14
    RULE_declareFunctionComplete = 15
    RULE_declareFunctionCompletion = 16
    RULE_inType = 17
    RULE_outType = 18
    RULE_functionParameter = 19
    RULE_typeExpression = 20
    RULE_declareVariable = 21
    RULE_controlFlow = 22
    RULE_expression = 23
    RULE_data = 24
    RULE_string = 25
    RULE_number = 26
    RULE_decimal = 27
    RULE_byte = 28
    RULE_integer = 29
    RULE_symbol = 30
    RULE_symbols = 31
    RULE_identifier = 32
    RULE_level2 = 33
    RULE_level1 = 34

    ruleNames =  [ "program", "statement", "simpleStatement", "shortStatement", 
                   "compoundStatement", "suite", "declarePackage", "declareImport", 
                   "importSuite", "importAlias", "ifStatement", "elseif", 
                   "elseStatement", "forInStatement", "declareFunction", 
                   "declareFunctionComplete", "declareFunctionCompletion", 
                   "inType", "outType", "functionParameter", "typeExpression", 
                   "declareVariable", "controlFlow", "expression", "data", 
                   "string", "number", "decimal", "byte", "integer", "symbol", 
                   "symbols", "identifier", "level2", "level1" ]

    EOF = Token.EOF
    SPACES=1
    JoinLine=2
    NEWLINE=3
    Escape=4
    Semicolon=5
    Import=6
    Package=7
    With=8
    As=9
    Comma=10
    Star=11
    If=12
    Else=13
    For=14
    In=15
    To=16
    Colon=17
    Set=18
    Return=19
    StringEscapeBlock=20
    StringEscapeSingle=21
    StringLiteralBlock=22
    StringLiteralSingle=23
    StringEmpty=24
    Decimal=25
    DecimalBad=26
    Binary=27
    Octal=28
    Hexadecimal=29
    Integer=30
    Exponent=31
    Base=32
    Identifier=33
    Dot=34
    Underline=35
    LineComment=36
    OPEN_PAREN=37
    CLOSE_PAREN=38
    OPEN_BRACK=39
    CLOSE_BRACK=40
    OPEN_BRACE=41
    CLOSE_BRACE=42
    Modulo=43
    Equal=44
    INDENT=45
    DEDENT=46

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(BasisParser.EOF, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(BasisParser.NEWLINE)
            else:
                return self.getToken(BasisParser.NEWLINE, i)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BasisParser.StatementContext)
            else:
                return self.getTypedRuleContext(BasisParser.StatementContext,i)


        def getRuleIndex(self):
            return BasisParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = BasisParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BasisParser.NEWLINE) | (1 << BasisParser.Import) | (1 << BasisParser.Package) | (1 << BasisParser.If) | (1 << BasisParser.Return) | (1 << BasisParser.StringEscapeBlock) | (1 << BasisParser.StringEscapeSingle) | (1 << BasisParser.StringLiteralBlock) | (1 << BasisParser.StringLiteralSingle) | (1 << BasisParser.StringEmpty) | (1 << BasisParser.Decimal) | (1 << BasisParser.DecimalBad) | (1 << BasisParser.Binary) | (1 << BasisParser.Octal) | (1 << BasisParser.Hexadecimal) | (1 << BasisParser.Integer) | (1 << BasisParser.Identifier) | (1 << BasisParser.OPEN_PAREN) | (1 << BasisParser.OPEN_BRACK))) != 0):
                self.state = 72
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [BasisParser.NEWLINE]:
                    self.state = 70
                    self.match(BasisParser.NEWLINE)
                    pass
                elif token in [BasisParser.Import, BasisParser.Package, BasisParser.If, BasisParser.Return, BasisParser.StringEscapeBlock, BasisParser.StringEscapeSingle, BasisParser.StringLiteralBlock, BasisParser.StringLiteralSingle, BasisParser.StringEmpty, BasisParser.Decimal, BasisParser.DecimalBad, BasisParser.Binary, BasisParser.Octal, BasisParser.Hexadecimal, BasisParser.Integer, BasisParser.Identifier, BasisParser.OPEN_PAREN, BasisParser.OPEN_BRACK]:
                    self.state = 71
                    self.statement()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 76
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 77
            self.match(BasisParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simpleStatement(self):
            return self.getTypedRuleContext(BasisParser.SimpleStatementContext,0)


        def compoundStatement(self):
            return self.getTypedRuleContext(BasisParser.CompoundStatementContext,0)


        def getRuleIndex(self):
            return BasisParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = BasisParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 81
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 79
                self.simpleStatement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 80
                self.compoundStatement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SimpleStatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def shortStatement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BasisParser.ShortStatementContext)
            else:
                return self.getTypedRuleContext(BasisParser.ShortStatementContext,i)


        def Semicolon(self, i:int=None):
            if i is None:
                return self.getTokens(BasisParser.Semicolon)
            else:
                return self.getToken(BasisParser.Semicolon, i)

        def getRuleIndex(self):
            return BasisParser.RULE_simpleStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimpleStatement" ):
                listener.enterSimpleStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimpleStatement" ):
                listener.exitSimpleStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSimpleStatement" ):
                return visitor.visitSimpleStatement(self)
            else:
                return visitor.visitChildren(self)




    def simpleStatement(self):

        localctx = BasisParser.SimpleStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_simpleStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.shortStatement()
            self.state = 88
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 84
                    self.match(BasisParser.Semicolon)
                    self.state = 85
                    self.shortStatement() 
                self.state = 90
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

            self.state = 92
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BasisParser.Semicolon:
                self.state = 91
                self.match(BasisParser.Semicolon)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ShortStatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(BasisParser.ExpressionContext,0)


        def getRuleIndex(self):
            return BasisParser.RULE_shortStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterShortStatement" ):
                listener.enterShortStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitShortStatement" ):
                listener.exitShortStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitShortStatement" ):
                return visitor.visitShortStatement(self)
            else:
                return visitor.visitChildren(self)




    def shortStatement(self):

        localctx = BasisParser.ShortStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_shortStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CompoundStatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declarePackage(self):
            return self.getTypedRuleContext(BasisParser.DeclarePackageContext,0)


        def declareImport(self):
            return self.getTypedRuleContext(BasisParser.DeclareImportContext,0)


        def declareVariable(self):
            return self.getTypedRuleContext(BasisParser.DeclareVariableContext,0)


        def declareFunction(self):
            return self.getTypedRuleContext(BasisParser.DeclareFunctionContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(BasisParser.IfStatementContext,0)


        def getRuleIndex(self):
            return BasisParser.RULE_compoundStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompoundStatement" ):
                listener.enterCompoundStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompoundStatement" ):
                listener.exitCompoundStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompoundStatement" ):
                return visitor.visitCompoundStatement(self)
            else:
                return visitor.visitChildren(self)




    def compoundStatement(self):

        localctx = BasisParser.CompoundStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_compoundStatement)
        try:
            self.state = 101
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 96
                self.declarePackage()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 97
                self.declareImport()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 98
                self.declareVariable()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 99
                self.declareFunction()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 100
                self.ifStatement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SuiteContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(BasisParser.NEWLINE)
            else:
                return self.getToken(BasisParser.NEWLINE, i)

        def INDENT(self):
            return self.getToken(BasisParser.INDENT, 0)

        def DEDENT(self):
            return self.getToken(BasisParser.DEDENT, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BasisParser.StatementContext)
            else:
                return self.getTypedRuleContext(BasisParser.StatementContext,i)


        def OPEN_BRACE(self):
            return self.getToken(BasisParser.OPEN_BRACE, 0)

        def CLOSE_BRACE(self):
            return self.getToken(BasisParser.CLOSE_BRACE, 0)

        def getRuleIndex(self):
            return BasisParser.RULE_suite

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSuite" ):
                listener.enterSuite(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSuite" ):
                listener.exitSuite(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSuite" ):
                return visitor.visitSuite(self)
            else:
                return visitor.visitChildren(self)




    def suite(self):

        localctx = BasisParser.SuiteContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_suite)
        self._la = 0 # Token type
        try:
            self.state = 129
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BasisParser.NEWLINE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 103
                self.match(BasisParser.NEWLINE)
                self.state = 104
                self.match(BasisParser.INDENT)
                self.state = 106 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 105
                    self.statement()
                    self.state = 108 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BasisParser.Import) | (1 << BasisParser.Package) | (1 << BasisParser.If) | (1 << BasisParser.Return) | (1 << BasisParser.StringEscapeBlock) | (1 << BasisParser.StringEscapeSingle) | (1 << BasisParser.StringLiteralBlock) | (1 << BasisParser.StringLiteralSingle) | (1 << BasisParser.StringEmpty) | (1 << BasisParser.Decimal) | (1 << BasisParser.DecimalBad) | (1 << BasisParser.Binary) | (1 << BasisParser.Octal) | (1 << BasisParser.Hexadecimal) | (1 << BasisParser.Integer) | (1 << BasisParser.Identifier) | (1 << BasisParser.OPEN_PAREN) | (1 << BasisParser.OPEN_BRACK))) != 0)):
                        break

                self.state = 111
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==BasisParser.NEWLINE:
                    self.state = 110
                    self.match(BasisParser.NEWLINE)


                self.state = 113
                self.match(BasisParser.DEDENT)
                pass
            elif token in [BasisParser.OPEN_BRACE]:
                self.enterOuterAlt(localctx, 2)
                self.state = 115
                self.match(BasisParser.OPEN_BRACE)
                self.state = 117
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==BasisParser.NEWLINE:
                    self.state = 116
                    self.match(BasisParser.NEWLINE)


                self.state = 120 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 119
                    self.statement()
                    self.state = 122 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BasisParser.Import) | (1 << BasisParser.Package) | (1 << BasisParser.If) | (1 << BasisParser.Return) | (1 << BasisParser.StringEscapeBlock) | (1 << BasisParser.StringEscapeSingle) | (1 << BasisParser.StringLiteralBlock) | (1 << BasisParser.StringLiteralSingle) | (1 << BasisParser.StringEmpty) | (1 << BasisParser.Decimal) | (1 << BasisParser.DecimalBad) | (1 << BasisParser.Binary) | (1 << BasisParser.Octal) | (1 << BasisParser.Hexadecimal) | (1 << BasisParser.Integer) | (1 << BasisParser.Identifier) | (1 << BasisParser.OPEN_PAREN) | (1 << BasisParser.OPEN_BRACK))) != 0)):
                        break

                self.state = 125
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==BasisParser.NEWLINE:
                    self.state = 124
                    self.match(BasisParser.NEWLINE)


                self.state = 127
                self.match(BasisParser.CLOSE_BRACE)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarePackageContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Package(self):
            return self.getToken(BasisParser.Package, 0)

        def symbol(self):
            return self.getTypedRuleContext(BasisParser.SymbolContext,0)


        def getRuleIndex(self):
            return BasisParser.RULE_declarePackage

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclarePackage" ):
                listener.enterDeclarePackage(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclarePackage" ):
                listener.exitDeclarePackage(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclarePackage" ):
                return visitor.visitDeclarePackage(self)
            else:
                return visitor.visitChildren(self)




    def declarePackage(self):

        localctx = BasisParser.DeclarePackageContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_declarePackage)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.match(BasisParser.Package)
            self.state = 132
            self.symbol()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclareImportContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return BasisParser.RULE_declareImport

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ImportSymbolsContext(DeclareImportContext):
